fixing overflow for browser support

--- a/styles/main.css
+++ b/styles/main.css
@@ -238,6 +238,7 @@ a:visited { color: white; }
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    overflow: hidden;
     overflow: clip;
 
     margin: .5rem 0;
